foreach add/remove

--- a/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
@@ -1,1 +1,8 @@
-{template .topOptions}
+{template .topContent}
+
+
+{template .input}
+<component class="KeywordsAutoComplete" arg-placeholder="{@enterKeywords}" onFocus="!focus" onEnter="onEnter">
+
+{template .bottomContent}
+<component class="Recommendations" onPick="onPickRecommendation">
