--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -18,13 +18,13 @@
 				<div class="app-keywords-tags-title">
 					{@contains}
 				</div>
-				<control class="ContainKeywordTags" name="containKeyword" args="{&item[0]}" onFocus="onFocus(false)">
+				<control class="ContainKeywordTags" name="containKeyword" items="{&item[0]}" onFocus="onFocus(false)">
 			</div>
 			<div class="app-keywords-right{$switched?' switched'}">
 				<div class="app-keywords-tags-title">
 					{@excludes}
 				</div>
-				<control class="ExcludeKeywordTags" name="notcontainKeyword" args="{&item[1]}" onFocus="onFocus(true)">
+				<control class="ExcludeKeywordTags" name="notcontainKeyword" items="{&item[1]}" onFocus="onFocus(true)">
 			</div>
 		</div>
 	{/foreach}
