Tabs, Keywords, tags parser

--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -11,7 +11,8 @@
 	</div>
 	<div class="app-tooltip keywords-hint"></div>
 </div>
-<div class="app-keywords-area">
+<div class="app-keywords-area{$keywordsCount>1?' multi'}">
+	<component class="Tabs">
 	{foreach $keywords as &item}
 		<div class="app-keywords-block">
 			<div class="app-keywords-left{$switched?' switched'}">
