--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -12,7 +12,7 @@
 	<div class="app-tooltip keywords-hint"></div>
 </div>
 <div class="app-keywords-area{$keywordsCount>1?' multi'}">
-	<component class="Tabs">
+	<component class="Tabs" items="{$tabs}">
 	{foreach $keywords as &item}
 		<div class="app-keywords-block">
 			<div class="app-keywords-left{$switched?' switched'}">
