--- a/www/builder/sources/ui/AutoComplete/AutoComplete.template
+++ b/www/builder/sources/ui/AutoComplete/AutoComplete.template
@@ -1,5 +1,17 @@
+{template .main}
 <div class="app-autocomplete app-input-container" scope>
 	<input type="text" placeholder="{~placeholder}" eid="input">
-	<div class="app-autocomplete-variants" eid="variants"/>
 	<template content>
+	<div class="app-autocomplete-variants{$active?' shown'}" eid="variants">
+		<div class="app-autocomplete-variants-inner">
+			{foreach $variants as &i => &variant}
+				<template variant data="{&variant}" index="{&i}">
+			{/foreach}
+		</div>
+	</div>
+</div>
+
+{template .variant}
+<div class="app-autocomplete-variant" data-index="{~index}" data-value="{~data['name']}">
+	{~data['name']}
 </div>
