--- a/www/builder/sources/ui/Editor/Editor.template
+++ b/www/builder/sources/ui/Editor/Editor.template
@@ -1,4 +1,8 @@
 <div class="app-editor-mask{$shown?' shown'}" onClick="hide"/>
 <div class="app-editor{$shown?' shown'}" scope>
+	<div class="app-editor-close" onClick="close"/>
+	<div class="app-editor-title">
+		{@editing}
+	</div>
 	<component class="AutoComplete" opts="{#keywordsAutoCompleteOptions}" active="{$withAutoComplete}" onEnter="onEnter">
 </div>
