Correctors, Keywords, builder, Controller, hints

--- a/www/builder/sources/controls/Tags/KeywordTags/KeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/KeywordTags.template
@@ -9,3 +9,11 @@
 		</span>
 	</div>
 </div>
+
+{template .tag}
+<div class="app-tags-item{.hasOption(~text)?' optioned'}">
+	<span class="app-tags-item-text" data-text="{~text}">
+		{.getProperTagText(~text)}
+	</span>
+	<span class="app-tags-remove"/>
+</div>
