--- a/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
+++ b/www/builder/sources/components/SearchForm/controls/keywords/KeywordsControl/KeywordsControl.template
@@ -1,37 +1,18 @@
-<div class="app-keywords-options">
-	<span class="bold">{@tofind}</span>
-	<control class="Select" name="nonmorph" options="{#keywordsNonMorphOptions}" arg-className="frameless" arg-tooltip="true">
-	<span class="bold">{@in}</span>
-	<control class="Checkbox" name="searchInDocumentation" args="{#docCheckboxOptions}">
-	<control class="Checkbox" name="registryContracts" args="{#contCheckboxOptions}">
-	<control class="Checkbox" name="registryProducts" args="{#prodCheckboxOptions}">
-	<div class="app-keywords-add-request">
-		<span>{@addRequest}</span>
-		<include tooltip className="question-tooltip" key="keywordsNewReq">
-	</div>
-	<div class="app-tooltip keywords-hint"/>
-</div>
-<component class="Tabs" items="{$tabs}" activeTab="{$activeTab}" cmpid="tabs" onSelect="onSelectTab" onRemove="onRemoveTab">
-<div class="app-keywords-area{$keywordsCount>1?' multi'}" eid="area">
-	{foreach $keywords as &item}
-		<div class="app-keywords-block">
-			<div class="app-keywords-left{$switched?' switched'}">
-				<div class="app-keywords-tags-title">
-					{@contains}
-					<span class="app-keywords-index">
-						{@request} {::index}
-						<span class="app-keywords-remove-request">{@removeRequest}</span>
-					</span>
-				</div>
-				<control class="ContainKeywordTags" name="containKeyword" items="{&item[0]}" onFocus="onFocus(false)" onEdit="onTagEdit">
-			</div>
-			<div class="app-keywords-right{$switched?' switched'}">
-				<div class="app-keywords-tags-title">
-					{@excludes}
-				</div>
-				<control class="ExcludeKeywordTags" name="notcontainKeyword" items="{&item[1]}" onFocus="onFocus(true)" onEdit="onTagEdit">
-			</div>
+<div class="app-keywords-block{$switched?' switched'}{$hasRecomm?' with-recommendations'}" scope>
+	<div class="app-keywords-left">
+		<div class="app-keywords-tags-title">
+			{@contains}
+			<span class="app-keywords-index">
+				{@request} {$index}
+				<span class="app-keywords-remove-request">{@removeRequest}</span>
+			</span>
 		</div>
-	{/foreach}
+		<control class="ContainKeywordTags" name="containKeyword" items="{~items[0]}" onFocus="onFocus(false)" onEdit="!edit" onRecChange="onRecommendationsChange">
+	</div>
+	<div class="app-keywords-right">
+		<div class="app-keywords-tags-title">
+			{@excludes}
+		</div>
+		<control class="ExcludeKeywordTags" name="notcontainKeyword" items="{~items[1]}" onFocus="onFocus(true)" onEdit="!edit">
+	</div>
 </div>
-<component class="KeywordTagEditor" cmpid="editor" onHide="onTagEdited">
