--- a/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ContainKeywordTags/ContainKeywordTags.template
@@ -2,11 +2,11 @@
 <div class="app-tags-top">
 	<span class="app-tags-select-button" data-index="1">
 		{$opt1}
-		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordOrderOptions}" title="{@wordOrder}">
+		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordOrderOptions}" title="{@wordOrder}" onChange="onChangeOption">
 	</span>
 	<span class="app-tags-select-button" data-index="2">
 		{$opt2}
-		<component class="PopupSelect" cmpid="opt2" arg-options="{#wordDistanceOptions}" title="{@wordDistance}">
+		<component class="PopupSelect" cmpid="opt2" arg-options="{#wordDistanceOptions}" title="{@wordDistance}" onChange="onChangeOption">
 	</span>
 	<template topButtons>
 </div>
@@ -15,4 +15,4 @@
 <component class="KeywordsAutoComplete" arg-placeholder="{@enterKeywords}" opts="{#keywordsAutoCompleteOptions}" onFocus="!focus" onEnter="onEnter" onPick="onPickVariant">
 
 {template .bottomContent}
-<component class="Recommendations" onPick="onPickRecommendation">
+<component class="Recommendations" onPick="onPickRecommendation" cmpid="recommendations" onChange="!recchange">
