--- a/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
@@ -1,5 +1,9 @@
 {template .topContent}
 <div class="app-tags-top">
+	<span class="app-tags-select-button" data-index="1">
+		{$opt1}
+		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordExcludeOptions}" title="{@findExcludes}" onChange="onChangeOption">
+	</span>
 	<template topButtons>
 </div>
 
