Dictionary, Validator, Core, User, Application

--- a/www/builder/config.json
+++ b/www/builder/config.json
@@ -15,7 +15,8 @@
 	"tests"       : "./tests",
 	"blanks"      : "./blanks",
 	"scripts"     : "./scripts",
-	"views"       : "views",
+	"utils"       : "./utils",
+	"views"       : "views",	
 	"pathToApi"   : "api",
 	
 	"router"      : {
