--- a/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
+++ b/www/builder/sources/controls/Tags/KeywordTags/ExcludeKeywordTags/ExcludeKeywordTags.template
@@ -4,7 +4,7 @@
 		{$opt1}
 		<component class="PopupSelect" cmpid="opt1" arg-options="{#wordExcludeOptions}" title="{@findExcludes}" onChange="onChangeOption">
 	</span>
-	<template topButtons>
+	<template templ="topButtons">
 </div>
 
 {template .input}
