--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,4 +1,6 @@
 <div class="app-datatable-outer-container">
-	{let &a}
+	{
+		let &a = [1, 3, '324', "324"], &b = [~q >= 3 ? 4 : a() <== 4]
+	}
 	<component class="DataTableTabPanel">
 </div>
