--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,3 +1,12 @@
 <div class="app-datatable-outer-container">
-	<component class="DataTableTabPanel" if="{!!true}" else="{.df()}">
+	<div></div>
+	{let &c = 43, &d = 434}
+	{let &a = 3, &b = 4}
+	<component class="DataTableTabPanel">
+	{if &c == 42}
+		Да, равняется 43
+	{else}
+		Нет, не равняется 43
+		<br><div>12321321</div>
+	{/if}
 </div>
