--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,3 +1,4 @@
+{if !!$aaa && !!~a}
 <div class="app-datatable-outer-container">
 	<div></div>
 	{let &c = 43, &d = 434}
@@ -10,3 +11,7 @@
 		<br><div>12321321</div>
 	{/if}
 </div>
+<div class="fuck"></div>
+{else}
+111
+{/if}
