--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,16 +1,6 @@
+
 <div class="app-datatable-outer-container">
-	{if !!$aaa && !!~a}
-		<div></div>
-		{let &c = 43, &d = 434}
-		{let &a = 3, &b = 4}
-		<component class="DataTableTabPanel">
-		{if &c == 42}
-			Да, равняется 43
-		{else}
-			Нет, не равняется 43
-			<br><div>12321321</div>
-		{/if}
-	{else}
-		<span id="bushstas">111</span>
-	{/if}
+	{let &b=3}
+{let &a=1}
+	<component class="DataTableTabPanel">
 </div>
