switch, ifSwitch parser

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -3,6 +3,24 @@
 	&a='sdsdd',
 	&d= -5 + 'df'
 }
+{if}
+	{ default}
+	rewr
+	{case '343'}
+	ewrew
+	{case !~a}
+		11111111111{~ss}
+		<div class="qqqq">54543
+
+		<span>444</span>
+		</div>
+	{case &bbb}
+		wedw
+
+	
+
+
+{/if}
 <div class="app-datatable-outer-container">
 	<component class="DataTableTabPanel">
 </div>
