--- a/www/builder/sources/ui/TooltipPopup/TooltipPopup.template
+++ b/www/builder/sources/ui/TooltipPopup/TooltipPopup.template
@@ -4,6 +4,8 @@
 	</div>
 	<div class="app-tooltip-popup-text">
 		{switch $corrector}
+			{case 'aaa'}
+				34324324
 			{case 'list'}
 				{foreach $text as &item}
 					<div class="app-tooltip-list-item">
