--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,3 +1,7 @@
+{let &a = $a}
 <div class="app-datatable-outer-container">
 	<component class="DataTableTabPanel">
 </div>
+{foreach ~aaa as &item =}
+	<div>111</div>
+{/foreach}
