foreach ifempty, ifempty and else location validation

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,6 +1,11 @@
 <div class="app-datatable-outer-container">
 	<component class="DataTableTabPanel">
+	
+	{foreach right $data as &k => &v}			
+		<div class="xxxxx">
+			{&v}
+		</div>
+		{ifempty}
+		324
+	{/foreach}
 </div>
-{foreach $aaa as &item => &a}
-	<div>111</div>
-{/foreach}
