--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,11 +1,27 @@
+<div>
+
+</div>
+<div>
+
+</div>
 <div class="app-datatable-outer-container">
-	<component class="DataTableTabPanel">
 	
-	{foreach right $data as &k => &v}			
+	<component class="DataTableTabPanel">
+
+	
+	{foreach right $data as &k => &v}
+
 		<div class="xxxxx">
 			{&v}
 		</div>
 		{ifempty}
 		324
+		
 	{/foreach}
+	
+</div>
+<span id="45">
+<span class="dfdsf">
+</span>
+<div>
 </div>
