controllers, loading, onload

--- a/www/builder/sources/components/DataTable/DataTable.template
+++ b/www/builder/sources/components/DataTable/DataTable.template
@@ -1,6 +1,6 @@
 <div class="app-datatable-outer-container">
 	<component class="DataTableTabPanel">
-	{foreach $items as &v => &g limit 5}
+	{foreach $items2 as &v => &g limit $limit}
 		<div class="xxxxx">
 			{&v}
 		</div>
